# Memory-Management-Simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: DESIGN.md
include/allocator/: base_allocator.hpp  best_fit.hpp  first_fit.hpp  worst_fit.hpp
include/buddy/: buddy_allocator.hpp
include/cache/: cache.hpp  cache_hierarchy.hpp
include/cli/: cli.hpp
include/common/: colors.hpp  types.hpp  utils.hpp
include/integration/: integrated_system.hpp
include/virtual_memory/: page_table.hpp  vmm.hpp
results/: allocation_result.txt  buddy_result.txt  cache_result.txt  mode_switch_result.txt  vm_result.txt
scripts/: run_all_tests.sh
src/: main.cpp
src/allocator/: base_allocator.cpp  best_fit.cpp  first_fit.cpp  worst_fit.cpp
src/buddy/: buddy_allocator.cpp  buddy_utils.cpp
src/cache/: cache.cpp  cache_hierarchy.cpp  replacement_policies.cpp
src/cli/: cli.cpp
src/integration/: integrated_system.cpp
src/virtual_memory/: page_replacement.cpp  page_table.cpp  vmm.cpp
tests/: allocation_tests.txt  buddy_tests.txt  cache_tests.txt  mode_switch_tests.txt  vm_tests.txt
